fixed scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+}
